Feat: Refactor services, enhance security & add exception handling